# weekly

./: .gitignore  01_mcvv  QA1.md  README.md  a.sh  commit.bat
.github/ISSUE_TEMPLATE/: hiring.md  job_seeking.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  templates.json  types.json  workspace.json
2023/01-目标九宫格/: 2023_小王同学_目标九宫格.xlsx
ARTS/: 2021_report.md  2_2021-05.md  46_weekly_2020_arts.md
ARTS/2021/: 2021.years.md  33.md  34.md
ARTS/2022/: 2022.years.md
Excalidraw/: Drawing 2025-06-27 18.09.03.excalidraw.md
Excel/2021/: 2021-习惯-作息-记录-20周.xlsx  2021_18_weely.xlsx  2021_王传义业务学习进度表.xlsx
Excel/2022/: 未命名.numbers  未命名绘图.drawio
Excel/life/: 系统之美_2019.xmind
Excel/work/: 2021-12.xlsx  2022-12-29.xlsx  ~$2021-12.xlsx  知识卡第一期.xlsx
Tidb/: Lesson 05：DDL 性能优化.md  Lesson_02_对TiDB进行基准测试.md  gdb调试TiDB.md  tikv.md  weeky1.md
Tidb/02_readcode/: Lesson 04：Execution 性能优化.md  tidb_lesson_04.md
Tidb/issue/: 01_trunk.md
Tidb/ppt/: 2020_10_tidb.pptx  msyql_tidb.md
Tidb/profile/: heap.profile
Word/2022/: 1.微信导入.docx  ~$1.微信导入.docx
ask/: issues43.xmind
blog/: config.toml  deploy.sh  hugo.ps1  hugo_deploy.ps1  hugo_deploy_home.bat  hugo_server.bat  myout.file  s.sh  start.sh
c++/: 1_stl.md
card/: 出版物3.pub
code/2021/gtest/: CMakeLists.txt
code/2022/01-gtest/: CMakeLists.txt  main.cpp
code/c++11/2011/template/: 1.cpp  2.cpp  2011-12-03.cpp  3.cpp  4  4.cpp  5.cpp  6.cpp  7.cpp  CMakeLists.txt  unique_ptr_2021-12-3.cpp
drawio/: EMS-2023-01-31-1505.excalidraw
images/: 01_rockdb.drawio
leetcode/: 02_dp.xmind  05_tree.xmind  leetcode_hard_pc.xmind  list.xmind  数据结构与算法.xmind
master-cpp/: Gemfile
master-cpp/demo/day1/: CMakeLists.txt  hello  hello.cpp  hello.i  hello.s  main.cpp
mycode/master-cpp/freelock/: CMakeLists.txt  day1.cpp
os/: 03_os_net.xmind
ppt/: 01-基本功.pptx  01_ask_raft.key  leetcode2021.drawio
storage/: Lustre_easy.md
system-design/: 02——系统设计题.xmind  1-循环队列.md
weekly/: GDT践行(第一期)：起床---运动--阅读.md
weekly_read/: book_c++.xmind
work/: 2025年 3月.md
xmind/: 01-os-编译.xmind  02-kernel-part1.xmind  BlueStore 原理4.key  BlueStore 原理5.key  MDS一致性之分布式锁.key  ThreadLocal.xmind  c++20有什么特性.xmind  lsm.xmind  为什么这么慢.xmind  创业笔记.xmind  堆排序.xmind  如何学习一个技术（耗子叔叔的建议）.xmind  数据结构.xmind  深入理解 Linux.xmind  深入理解文件系统.xmind  知识地图--分布式存储.xmind  知识地图-cc++.xmind  索引.xmind  网络协议.xmind  项目遇到问题.xmind
只管去做/: 2024_小王同学_目标九宫格.xlsx  行为设计02-100天在运动中断舍离手机篇.xmind
(+1752 files in other folders)
